--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
     <h3>귀하의 개인 데이터 보안</h3>
     <p>귀하의 개인 데이터 보안은 당사에게 중요하지만, 인터넷을 통한 전송 방법 또는 전자 저장 방법은 100% 안전하지 않습니다. 당사는 귀하의 개인 데이터를 보호하기 위해 상업적으로 허용 가능한 수단을 사용하고 있지만, 절대적인 보안을 보장할 수는 없습니다.</p>
     <h2>아동의 개인정보</h2>
-    <p>당사의 서비스는 13세 미만의 아동을 대상으로 하지 않습니다. 당사는 13세 미만의 아동으로부터 고의로 식별 가능한 정보를 수집하지 않습니다. 귀하가 부모나 보호자이며 귀하의 자녀가 개인 데이터를 제공한 사실을 알고 있는 경우 당사에 연락하십시오. 당사가 부모의 동의 없이 13세 미만의 아동으로부터 개인 데이터를 수집한 사실을 알게 되면, 당사는 해당 정보를 서버에서 삭제하기 위한 조치를 취합니다.</p>
+    <p>당사의 서비스는 3세 이상 아동을 대상으로 합니다. 당사는 부모의 동의 없이 13세 미만 아동으로부터 고의로 식별 가능한 정보를 수집하지 않습니다. 귀하가 부모나 보호자이며 귀하의 자녀가 개인 데이터를 제공한 사실을 알고 있는 경우 당사에 연락하십시오. 당사가 부모의 동의 없이 13세 미만 아동으로부터 개인 데이터를 수집한 사실을 알게 되면, 당사는 해당 정보를 서버에서 삭제하기 위한 조치를 취합니다.</p>
     <p>당사가 귀하의 정보를 처리하기 위한 법적 근거로 동의에 의존해야 하며 귀하의 국가가 부모의 동의를 요구하는 경우, 당사는 해당 정보를 수집 및 사용하기 전에 부모의 동의를 요구할 수 있습니다.</p>
+
     <h2>다른 웹사이트로의 링크</h2>
     <p>당사의 서비스에는 당사가 운영하지 않는 다른 웹사이트로의 링크가 포함될 수 있습니다. 제3자 링크를 클릭하면 해당 제3자의 사이트로 이동합니다. 방문하는 모든 사이트의 개인정보처리방침을 검토할 것을 강력히 권장합니다.</p>
     <p>당사는 제3자 사이트나 서비스의 콘텐츠, 개인정보 보호정책 또는 관행에 대해 책임을 지지 않습니다.</p>
